--- a/index.html
+++ b/index.html
@@ -188,22 +188,24 @@
             justify-content: center;
             margin-bottom: 25px;
             position: relative;
-            overflow: hidden;
+            overflow: visible;
         }
 
         #game-grid {
             display: grid;
-            grid-template-columns: repeat(var(--grid-size), var(--cell-size));
-            grid-template-rows: repeat(var(--grid-size), var(--cell-size));
+            grid-template-columns: repeat(var(--grid-size), 1fr);
+            grid-template-rows: repeat(var(--grid-size), auto);
             gap: 10px;
             background: rgba(255, 255, 255, 0.05);
             padding: 10px;
             border-radius: 16px;
+            width: 100%;
+            max-width: calc(var(--cell-size) * var(--grid-size) + 10px * (var(--grid-size) - 1) + 20px);
         }
 
         .cell {
-            width: var(--cell-size);
-            height: var(--cell-size);
+            width: 100%;
+            aspect-ratio: 1;
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 8px;
@@ -599,6 +601,17 @@
                 style="width: 100%; max-width: 200px; background: rgba(255,255,255,0.1); color: var(--text-color); border: 1px solid rgba(255,255,255,0.2); border-radius: 12px; padding: 12px; font-weight: bold; font-size: 0.95rem; cursor: pointer;">닫기</button>
         </div>
 
+        <div id="practice-complete-overlay"
+            style="display: none; position: absolute; top:0; left:0; width: 100%; height: 100%; background: var(--bg-color); border-radius: 24px; flex-direction: column; justify-content: center; align-items: center; z-index: 95; padding: 24px; text-align: center;">
+            <div style="font-size: 3rem; margin-bottom: 15px;">🎉</div>
+            <h2 style="font-size: 1.5rem; color: var(--primary-color); margin-bottom: 10px;">튜토리얼 완료!</h2>
+            <p style="color: #94a3b8; font-size: 0.9rem; margin-bottom: 25px; word-break: keep-all; line-height: 1.5;">
+                게임의 규칙을 이해하셨나요?<br>이제 이름을 입력하고 오늘의 도전을 시작하세요!</p>
+            <button id="practice-to-login-btn"
+                style="width: 100%; max-width: 250px; background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: var(--bg-color); border: none; border-radius: 12px; padding: 15px; font-weight: bold; font-size: 1.05rem; cursor: pointer; transition: transform 0.2s;">오늘의
+                도전 시작하기</button>
+        </div>
+
         <div id="grid-container">
             <script src="dictionary.js"></script>
             <div id="game-grid"></div>
@@ -616,6 +629,9 @@
                     <button id="enter-btn"
                         style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: var(--bg-color); border: none; border-radius: 12px; padding: 8px 20px; font-weight: bold; font-size: 0.95rem; cursor: pointer; white-space: nowrap;">시작</button>
                 </div>
+                <button id="practice-btn"
+                    style="width: 100%; background: rgba(129, 140, 248, 0.15); color: var(--secondary-color); border: 1px solid var(--secondary-color); border-radius: 12px; padding: 12px; font-weight: bold; font-size: 0.95rem; cursor: pointer; margin-bottom: 12px; transition: all 0.2s;">🎮
+                    튜토리얼 게임 진행하기</button>
                 <div id="login-scoreboard"
                     style="background: rgba(255,255,255,0.05); border-radius: 12px; padding: 12px; border: 1px solid rgba(255,255,255,0.1);">
                     <div
@@ -823,6 +839,8 @@
                     this.isDictLoaded = false;
 
                     this.overallStartTime = null; // Total time across all levels
+
+                    this.isPracticeMode = false;
 
                     this.init();
                 }
@@ -1252,6 +1270,12 @@
                         if (e.key === 'Enter') doLogin();
                     };
 
+                    // Practice Mode
+                    this.practiceBtn = document.getElementById('practice-btn');
+                    this.practiceCompleteOverlay = document.getElementById('practice-complete-overlay');
+                    this.practiceBtn.onclick = () => this.startPractice();
+                    document.getElementById('practice-to-login-btn').onclick = () => this.endPractice();
+
                     // Add shake animation style dynamically if not present
                     if (!document.getElementById('shake-style')) {
                         const style = document.createElement('style');
@@ -1563,6 +1587,82 @@
                     return aN.charCodeAt(0) === bN.charCodeAt(0);
                 }
 
+                startPractice() {
+                    this.isPracticeMode = true;
+                    this.currentLevelIndex = 0;
+
+                    // Hide login, show game controls
+                    this.loginSection.style.display = 'none';
+                    this.gameControls.style.display = 'block';
+
+                    // Use fixed seed for practice
+                    this.rng = new SeededRandom(99999);
+                    this.levelType = 'normal_full';
+                    this.minWordLength = 2;
+
+                    // Update display for practice mode
+                    this.dayLevelDisplayEl.textContent = '튜토리얼';
+                    this.stageDots.forEach(dot => {
+                        dot.classList.remove('active', 'completed');
+                    });
+                    this.liveTimerEl.textContent = '';
+
+                    // Generate practice level
+                    this.inputEl.value = '';
+                    this.wordDisplayEl.innerHTML = '';
+                    this.generateSolvableLevel();
+                    this.startPos = { ...this.playerPos };
+                    this.initialStartPos = { ...this.playerPos };
+                    this.render();
+
+                    // No timer in practice mode
+                    if (this.timerInterval) clearInterval(this.timerInterval);
+
+                    // Enable hint immediately in practice mode
+                    if (this.hintInterval) clearInterval(this.hintInterval);
+                    this.hintBtn.disabled = false;
+                    this.hintBtn.style.opacity = '1';
+                    this.hintBtn.style.cursor = 'pointer';
+                    this.hintBtn.innerHTML = "정답<br>보기";
+
+                    this.isInputLocked = false;
+                    this.inputEl.disabled = false;
+                    this.startBtn.innerHTML = "이동<br>하기";
+                    this.startBtn.onclick = () => this.handleStart();
+
+                    this.showMessage('튜토리얼 문제입니다. 자음을 보고 단어를 입력하세요!');
+                }
+
+                endPractice() {
+                    this.isPracticeMode = false;
+                    this.practiceCompleteOverlay.style.display = 'none';
+                    this.currentLevelIndex = 0;
+
+                    // Reset game state
+                    this.isInputLocked = false;
+                    this.letterStates = [];
+                    this.moveHistory = [];
+                    this.isWarping = false;
+                    this.inputEl.value = '';
+                    this.inputEl.disabled = false;
+                    this.wordDisplayEl.innerHTML = '';
+                    this.hideActionPanel();
+                    this.clearHighlights();
+                    if (this.timerInterval) clearInterval(this.timerInterval);
+                    if (this.hintInterval) clearInterval(this.hintInterval);
+                    this.liveTimerEl.textContent = '';
+                    this.hintDisplayEl.textContent = '';
+
+                    // Show login, hide game controls
+                    this.gameControls.style.display = 'none';
+                    this.loginSection.style.display = 'block';
+
+                    // Render empty grid
+                    this.renderEmptyGrid();
+                    this.dayLevelDisplayEl.textContent = '';
+                    this.showMessage('격자 위의 자음을 보고 단어를 입력하세요.');
+                }
+
                 startNewLevel() {
                     this.initGame();
                 }
@@ -1656,6 +1756,16 @@
                         const allProcessed = this.letterStates.every(s => s.status === 'used' || s.status === 'warped' || s.status === 'moved');
 
                         if (allProcessed) {
+                            // Practice mode: show completion overlay
+                            if (this.isPracticeMode) {
+                                this.showMessage('🎉 튜토리얼을 클리어했습니다!');
+                                this.hideActionPanel();
+                                setTimeout(() => {
+                                    this.practiceCompleteOverlay.style.display = 'flex';
+                                }, 1000);
+                                return true;
+                            }
+
                             this.currentLevelIndex++;
                             if (this.currentLevelIndex < this.maxLevelsPerDay) {
                                 this.showMessage(`🎉 단계 클리어! ${this.currentLevelIndex + 1}단계로 이동합니다...`);
